Fixed password alignment (#1215)

--- a/assets/section-password.css
+++ b/assets/section-password.css
@@ -329,4 +329,5 @@ details.modal .modal__toggle-open {
 
 password-modal {
   justify-self: flex-end;
+  grid-column: 3;
 }
